force-app/main/default/objects/Unsealed__c/Unsealed__c.object-meta.xml
<CustomObject>
    <label>Unsealed</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>Unsealed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unsealeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>