force-app/main/default/objects/Unsealed__c/fields/Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Id__c</fullName>
    <formula>Branch__r.Branch_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>