force-app/main/default/objects/Unsealed__c/fields/BranchId__c.field-meta.xml
<CustomField>
    <fullName>BranchId__c</fullName>
    <formula>Branch__r.Branch_Id__c</formula>
    <label>Branch Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>