force-app/main/default/objects/Unsealed__c/fields/Daily_logs__c.field-meta.xml
<CustomField>
    <fullName>Daily_logs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily logs</label>
    <referenceTo>DailyLog__c</referenceTo>
    <relationshipName>Goods_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>