force-app/main/default/objects/Unsealed__c/fields/RouteId__c.field-meta.xml
<CustomField>
    <fullName>RouteId__c</fullName>
    <formula>Route__r.Route_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Id</label>
    <type>Text</type>
</CustomField>