force-app/main/default/objects/Unsealed__c/fields/Unsealed_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsealed_Approved_Date__c</fullName>
    <label>Unsealed  Rejected/Approved Date</label>
    <type>Date</type>
</CustomField>