force-app/main/default/objects/Unsealed__c/fields/Unsealed_Approver__c.field-meta.xml
<CustomField>
    <fullName>Unsealed_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unsealed Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unsealeds</relationshipName>
    <type>Lookup</type>
</CustomField>