force-app/main/default/objects/Unsealed__c/fields/Unsealed_Id__c.field-meta.xml
<CustomField>
    <fullName>Unsealed_Id__c</fullName>
    <displayFormat>U-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Unsealed Id</label>
    <type>AutoNumber</type>
</CustomField>